<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_location"
        android:icon="@drawable/ic_menu_mylocation"
        android:orderInCategory="1"
        android:title="@string/my_location_msg"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_suggest"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="2"
        android:title="@string/suggest_msg"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="3"
        android:title="@string/search_msg"
        app:showAsAction="ifRoom" />
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->

</menu>
